# Aplica-ie-Web-Reconciliere-WMS-WME-prin-ERP

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: canonicalization.py  imports.py  normalization.py
backend/app/canonicalization/: __init__.py  buckets.py  rules.py  service.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/imports/: __init__.py  wme_import_service.py  wme_parser.py  wme_schema.py  wms_import_service.py  wms_parser.py  wms_schema.py
backend/app/normalization/: __init__.py  rules.py  service.py
backend/tests/: test_canonicalization_rules.py  test_canonicalization_service.py  test_health.py  test_models_metadata.py  test_normalization_rules.py  test_normalization_service.py  test_wme_parser.py  test_wms_parser.py
docs/: canonicalization.md  data-model.md  local-development.md  matching-rules.md  mvp-plan.md  normalization.md  qa-plan.md  restart-00-baseline.md  restart-01-audit.md  technical-spec.md  ui-flows.md  wme-import.md  wms-import.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: main.tsx  styles.css
