[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wms-wme-reconciliation-backend"
version = "0.1.0"
description = "Backend API for WMS-WME reconciliation through ERP"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg[binary]==3.2.3",
    "python-multipart==0.0.20",
    "pandas==2.2.3",
    "openpyxl==3.1.5"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
    "ruff==0.8.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F"]
